@@ -12,6 +12,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [SYSTEM] [PKI] Add POST, PUT and DELETE requests for APIs
 ### Changed
 - [API_PARSER] [HARFANGLAB] truncate 'rule_content' and 'process_sigma_rule_content' fields if they have more than 16384 characters
+- [API_PARSER] [API_BEYONDTRUST_PRA] Add fields
 ### Fixed
 - [SYSTEM] [NODE] Uniformize editable fields on API and GUI
 - [HTML] [NODE] Show better field errors while editing Node parameters
